--- a/index.html
+++ b/index.html
@@ -96,36 +96,36 @@
     </style>
 </head>
     <!DOCTYPE html>
-        <figure style="text-align: ;">
-    <img src="teto.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:250px">
+        <figure style="text-align: center;">
+    <img src="teto.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:350px">
     <figcaption>Teto de sala de aula danificado.</figcaption>
 </figure>
 </head>
 </html>
     <!DOCTYPE html>
-        <figure style="text-align: ;">
-    <img src="escada.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:500px">
+        <figure style="text-align: center;">
+    <img src="escada.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:400px">
     <figcaption>Escada sem o devido preenchimento de porcenalato ou outro material.</figcaption>
 </figure>
 </head>
 </html>
 <!DOCTYPE html>
-        <figure style="text-align: ;">
-    <img src="calçada.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:500px">
+        <figure style="text-align: center;">
+    <img src="calçada.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:400px">
     <figcaption>Outro exemplo de local sem preenchimento correto de porcenalato ou outro material.</figcaption>
 </figure>
 </head>
 </html>
 <!DOCTYPE html>
-        <figure style="text-align: ;">
-    <img src="parece_descascada.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:500px">
+        <figure style="text-align: center;">
+    <img src="parece_descascada.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:400px">
     <figcaption>Parede descascando.</figcaption>
 </figure>
 </head>
 </html>
 <!DOCTYPE html>
-        <figure style="text-align: ;">
-    <img src="frente-sala.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:250px">
+        <figure style="text-align: center;">
+    <img src="frente-sala.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:350px">
     <figcaption>Vista da porta de uma sala de aula.</figcaption>
 </figure>
 </head>
