--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         }
     </style>
 </head>
+    <h2>Mais imagens das condições da escola:</h2>
     <!DOCTYPE html>
         <figure style="text-align: center;">
     <img src="teto.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:350px">
@@ -130,6 +131,7 @@
 </figure>
 </head>
 </html>
+<h2>Vídeo de entrevistas:</h2>
     <center>
     <iframe width="640" height="360" src="https://www.youtube.com/embed/ID_DO_VIDEO" frameborder="0" allowfullscreen></iframe>
 </center>
