--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
         </section>
     </main>
-    <center> <p>Mais imagens das condições da escola:</p> </center>
+    <center> <h2>Mais imagens das condições da escola:</h2> </center>
     <!DOCTYPE html>
         <figure style="text-align: center;">
     <img src="teto.jpeg" alt="Descrição da imagem" style="border: 2px solid #000; border-radius: 15px; width:350px">
@@ -90,7 +90,7 @@
 </figure>
 </head>
 </html>
-<center> <p>Vídeo de entrevistas:</p> </center>
+<center> <h2>Vídeo de entrevistas:</h2> </center>
     <center>
     <iframe width="640" height="360" src="https://www.youtube.com/embed/ID_DO_VIDEO" frameborder="0" allowfullscreen></iframe>
 </center>
