--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 </html>
 <center> <h2>Vídeo de entrevistas:</h2> </center>
     <center>
-    <iframe width="640" height="360" src="https://www.youtube.com/watch?v=pYp-Yd5KRAo" frameborder="0" allowfullscreen></iframe>
+    <iframe width="640" height="360" src="https://youtu.be/mckG6hYSxz0?si=nGT_YzeysF1OZ-Bv" frameborder="0" allowfullscreen></iframe>
 </center>
     <!-- Rodapé -->
     <footer>
