--- a/index.html
+++ b/index.html
@@ -91,9 +91,22 @@
 </head>
 </html>
 <center> <h2>Vídeo de entrevistas:</h2> </center>
-    <center>
-    <iframe width="640" height="360" src="https://youtu.be/mckG6hYSxz0?si=nGT_YzeysF1OZ-Bv" frameborder="0" allowfullscreen></iframe>
-</center>
+   <!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Incorporar Vídeo do YouTube</title>
+</head>
+<body>
+    <h1>Meu Vídeo do YouTube</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/mckG6hYSxz0" 
+            title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+    </iframe>
+</body>
+</html>
     <!-- Rodapé -->
     <footer>
         <p>© 2024 Infraestrutura Educacional nas Escolas | Todos os direitos reservados.</p>
