--- a/index.html
+++ b/index.html
@@ -99,13 +99,16 @@
     <title>Incorporar Vídeo do YouTube</title>
 </head>
 <body>
+    <center>
     <h1>Meu Vídeo do YouTube</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/mckG6hYSxz0" 
             title="YouTube video player" frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen>
     </iframe>
+        </center>
 </body>
+ 
 </html>
     <!-- Rodapé -->
     <footer>
